feat: refactor account management to use request object and add CSRF protection
Co-authored-by: Genie <genie@cosine.sh>

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -9,12 +9,9 @@ app_root:
         path: /accounts
         permanent: true
 
-app_upload_redirect:
-    path: /upload
-    defaults:
-        _controller: 'Symfony\Bundle\FrameworkBundle\Controller\RedirectController::urlRedirect'
-        path: /accounts
-        permanent: true
+app_upload:
+  path: /upload
+  controller: App\Controller\ReportController::__init
 
 app_parse_html:
   path: /html-report
